Add more weights
