# server/models/weights.go
@@ -18,36 +18,44 @@ type Weights struct {
 	AutomaticUdder    float64 `` // Вымя. Вес по методике
 	AutomaticSacrum   float64 `` // Крестец. Вес по методике
 
-	ChestWidth   float64 `` // Ширина груди
-	BodyDepth    float64 `` // Глубина туловища
-	SacrumHeight float64 `` // высота в крестце
-	SacrumWidth  float64 `` // ширина в крестце
-	BodyType     float64 `` // Тип телосложения
-	Fatness      float64 `` // Упитанность
-	RibsAngle    float64 `` // Угол наклона ребер
-	SacrumAngle  float64 `` // Угол наклона крестца
+	MilkTypeChestWidth      float64 `` // МТ Ширина груди
+	MilkTypeBodyDepth       float64 `` // МТ Глубина туловища
+	MilkTypeSacrumHeight    float64 `` // МТ высота в крестце
+	MilkTypeBodyType        float64 `` // МТ Тип телосложения
+	MilkTypeFatness         float64 `` // МТ Упитанность
+	MilkTypeRibsAngle       float64 `` // МТ Угол наклона ребер
+	MilkTypeBackBoneQuality float64 `` // МТ качество костяка
+	MilkTypeTopLine         float64 `` // МТ Линия верха
 
-	HarmonyOfMovement   float64 `` // Гармоничность движения
-	ForelegWalk         float64 `` // Поступь передних ног
-	HindLegWalkSideView float64 `` // Поступь задних ног вид сбоку
-	HindLegWalkBackView float64 `` // Поступь задних ног вид cзади
-	HoofAngle           float64 `` // Угол копыта
+	BodySacrumHeight float64 `` // Т высота в крестце
+	BodyChestWidth   float64 `` // Т Ширина груди
+	BodyBodyDepth    float64 `` // Т Глубина туловища
+	BodyDeception    float64 `` // Т Обмускульность
 
-	UdderDepth                      float64 `` // Глубина вымени
-	FrontNippleLength               float64 `` // Длинна передних сосков
-	FrontNippleLocationBackView     float64 `` // Расположение передних сосков вид сзади
-	BackNippleLocationBackView      float64 `` // Расположение задних сосков вид сзади
-	FrontUdderSegmentsLocation      float64 `` // Прикрепление передних долей вымени
-	BackUdderSegmentsLocationHeight float64 `` // Высота прикрепления задних долей вымени
-	BackUdderSegmentsWidth          float64 `` // Ширина задних долей вымени
-	CentralLigamentDepth            float64 `` // Глубина центральной связки
+	SacrumAngle  float64 `` // Кр Угол наклона крестца
+	SacrumWidth  float64 `` // Кр ширина в крестце
+	SacrumLength float64 `` // Кр Длина крестца
 
-	BackBoneQuality     float64 `` // качество костяка
-	Deception           float64 `` // Обмускульность
-	SacrumLength        float64 `` // Длина крестца
-	TopLine             float64 `` // Линия верха
-	UdderBalance        float64 `` // Баланс вымени
-	FrontNippleDiameter float64 `` // Диаметр передних сосков (9 балов)
-	BackNippleDiameter  float64 `` // Диаметр задних сосков
-	UdderVeins          float64 `` // Выраженность вен вымени
+	LimbsForelegWalk         float64 `` // К Поступь передних ног
+	LimbsHindLegWalkSideView float64 `` // К Поступь задних ног вид сбоку
+	LimbsHindLegWalkBackView float64 `` // К Поступь задних ног вид cзади
+	LimbsDeception           float64 `` // К Обмускульность
+	LimbsHoofAngle           float64 `` // К Угол копыта
+	LimbsHarmonyOfMovement   float64 `` // К Гармоничность движения
+
+	UdderDepth                      float64 `` // В Глубина вымени
+	FrontNippleLength               float64 `` // В Длинна передних сосков
+	FrontNippleLocationBackView     float64 `` // В Расположение передних сосков вид сзади
+	BackNippleLocationBackView      float64 `` // В Расположение задних сосков вид сзади
+	FrontUdderSegmentsLocation      float64 `` // В Прикрепление передних долей вымени
+	BackUdderSegmentsLocationHeight float64 `` // В Высота прикрепления задних долей вымени
+	BackUdderSegmentsWidth          float64 `` // В Ширина задних долей вымени
+	CentralLigamentDepth            float64 `` // В Глубина центральной связки
+
+	UdderBalance        float64 `` // В Баланс вымени
+	FrontNippleDiameter float64 `` // В Диаметр передних сосков (9 балов)
+	BackNippleDiameter  float64 `` // В Диаметр задних сосков
+	UdderVeins          float64 `` // В Выраженность вен вымени
+	//SacrumAngle         float64 `` // Угол наклона крестца
+
 }
